# telesh

./: .gitignore  Cargo.toml
src/: main.rs
