[package]
name = "telesh"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
image = "0.24.7"
teloxide = { version = "0.12.2", features = ["macros"] }
tokio = { version =  "1.8", features = ["rt-multi-thread", "macros"] }
win-screenshot = "4.0.5"
